# Seaweed-Growth-Model

./: .flake8  .gitignore  404.html  LICENSE  README.md  automate_mkdocs.py  environment.yml  index.html  mkdocs.yml  mkgendocs.yml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  docs_2.yml  isort.yml  lint_action.yml  superlinter.yml  testing.yml
data/: readme.txt  seaweed_environment_data_in_nuclear_war.csv
data/geospatial_information/: Untitled.ipynb  global_harbors.json
data/gridded_data_test_dataset/: Test reading stuff.ipynb
data/gridded_data_test_dataset_US_only/: nw_NH4_36_months_pickle.pkl  nw_NO3_36_months_pickle.pkl  nw_TEMP_36_months_pickle.pkl
data/interim_data/: illumination_factor_LME.pkl  seaweed_growth_rate_LME.pkl
data/interim_results/: growth_df_clustered.pkl  illumination_factor_LME.pkl  illumination_factor_US.pkl  inertias.csv  (+12 more)
docs/: readme.txt
results/: readme.txt
scripts/: Data_Download.ipynb  Example.ipynb  Seaweed Model How To.ipynb  Seaweed_Model.ipynb  Sensitivity_Analysis.ipynb  readme.txt
search/: search_index.json
src/: growth_model.py  ocean_section.py  plotter.py  plotter_lme.py  postprocessing.py  prep_data.py  prep_grid_data.py  preprocessing.py  read_files.py  read_write_files.py  readme.txt  scrape_data_in_cluster.py  seaweed_growth.py  seaweed_model.py  utilities.py  write_files.py
tests/: readme.txt  test_growth_model.py  test_ocean_section.py  test_postprocessing.py  test_read_files.py  test_read_write_files.py  test_seaweed_growth.py  test_seaweed_model.py
(+120 files in other folders)
